@@ -5,6 +5,9 @@ HISTORY
 1.1rc8 (Unreleased)
 -------------------
 
+- Fix when editing contextuals portlets
+  #117 http://plone.org/products/tinymce/issues/117
+  [sylvainb]
 
 
 1.1rc7 (2009-11-18)
